<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
      android:layout_marginTop="30dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/hello" />

    <Button
        android:id="@+id/ButtonAddArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_area" />

    <Button
        android:id="@+id/ButtonSearchArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
        android:text="@string/search_area" />

      <Button
        android:id="@+id/ButtonTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
        android:text="@string/make_test" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
              android:layout_marginTop="60dp"
        android:text="@string/help_translate" />

</LinearLayout>