<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sample" />

    <Spinner
        android:id="@+id/spinnerDepartement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/Electricity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Electricity" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/GreyWatter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GreyWatter" />

    <CheckBox
        android:id="@+id/Toilets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Toilets" />

    <CheckBox
        android:id="@+id/CanSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CanSleep" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
         <Button android:id="@+id/okButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="Envoyer"
    />
    <Button android:id="@+id/cancelButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="Enregistrer"
    />
    <Button android:id="@+id/cancelButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="Annuler"
    />
    </LinearLayout>
    
</LinearLayout>
</ScrollView>
